Add separate confirmStarsPayment function

--- a/web_app.html
+++ b/web_app.html
@@ -2491,6 +2491,12 @@
             document.body.appendChild(modal);
         }
         
+        function confirmStarsPayment(productId) {
+            // Close modal and open bot
+            document.querySelector('#buyCurrencyModal')?.remove();
+            tg.openTelegramLink(`https://t.me/qanexus_bot?start=buy_stars_${productId}`);
+        }
+        
         function goToStarsPayment(productId) {
             // Don't close modal - keep it open
             // Show invoice right in the modal area
@@ -2511,7 +2517,7 @@
                                 ${productId === 1 ? '10' : '40'} ⭐
                             </div>
                         </div>
-                        <button onclick="this.closest('.modal').remove(); goToStarsPayment(${productId})" style="width:100%;padding:12px;background:linear-gradient(135deg,#667eea,#764ba2);color:#fff;border:none;border-radius:10px;cursor:pointer;font-weight:700;">
+                        <button onclick="confirmStarsPayment(${productId})" style="width:100%;padding:12px;background:linear-gradient(135deg,#667eea,#764ba2);color:#fff;border:none;border-radius:10px;cursor:pointer;font-weight:700;">
                             💎 Подтвердить оплату
                         </button>
                         <button onclick="this.closest('.modal').remove(); openBuyCurrency()" style="width:100%;padding:12px;background:rgba(255,255,255,0.1);color:#fff;border:1px solid rgba(255,255,255,0.3);border-radius:10px;cursor:pointer;font-weight:600;margin-top:10px;">
