Use button onclick with tg.openTelegramLink

--- a/web_app.html
+++ b/web_app.html
@@ -2469,9 +2469,9 @@
                                 </div>
                                 <div style="font-size:24px;">💎</div>
                             </div>
-                            <a href="https://t.me/qanexus_bot?start=buy_stars_1" style="display:block;width:100%;padding:12px;background:linear-gradient(135deg,#667eea,#764ba2);color:#fff;border:none;border-radius:10px;cursor:pointer;font-weight:700;font-size:14px;margin-top:10px;text-align:center;text-decoration:none;">
+                            <button onclick="const tg=window.Telegram?.WebApp;if(tg)tg.openTelegramLink('https://t.me/qanexus_bot?start=buy_stars_1');else window.location.href='https://t.me/qanexus_bot?start=buy_stars_1';" style="width:100%;padding:12px;background:linear-gradient(135deg,#667eea,#764ba2);color:#fff;border:none;border-radius:10px;cursor:pointer;font-weight:700;font-size:14px;margin-top:10px;">
                                 💰 Купить за 10 ⭐
-                            </a>
+                            </button>
                         </div>
                         <div style="background:linear-gradient(135deg,rgba(234,179,8,0.2),rgba(251,191,36,0.2));padding:20px;border-radius:15px;border:2px solid rgba(234,179,8,0.5);">
                             <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:10px;">
@@ -2481,9 +2481,9 @@
                                 </div>
                                 <div style="font-size:24px;">💎</div>
                             </div>
-                            <a href="https://t.me/qanexus_bot?start=buy_stars_2" style="display:block;width:100%;padding:12px;background:linear-gradient(135deg,#667eea,#764ba2);color:#fff;border:none;border-radius:10px;cursor:pointer;font-weight:700;font-size:14px;margin-top:10px;text-align:center;text-decoration:none;">
+                            <button onclick="const tg=window.Telegram?.WebApp;if(tg)tg.openTelegramLink('https://t.me/qanexus_bot?start=buy_stars_2');else window.location.href='https://t.me/qanexus_bot?start=buy_stars_2';" style="width:100%;padding:12px;background:linear-gradient(135deg,#667eea,#764ba2);color:#fff;border:none;border-radius:10px;cursor:pointer;font-weight:700;font-size:14px;margin-top:10px;">
                                 💰 Купить за 40 ⭐
-                            </a>
+                            </button>
                         </div>
                     </div>
                 </div>
