Use tg.openLink instead of openTelegramLink

--- a/web_app.html
+++ b/web_app.html
@@ -2469,7 +2469,7 @@
                                 </div>
                                 <div style="font-size:24px;">💎</div>
                             </div>
-                            <button onclick="const tg=window.Telegram?.WebApp;if(tg)tg.openTelegramLink('https://t.me/qanexus_bot?start=buy_stars_1');else window.location.href='https://t.me/qanexus_bot?start=buy_stars_1';" style="width:100%;padding:12px;background:linear-gradient(135deg,#667eea,#764ba2);color:#fff;border:none;border-radius:10px;cursor:pointer;font-weight:700;font-size:14px;margin-top:10px;">
+                            <button onclick="try{tg.openLink('https://t.me/qanexus_bot?start=buy_stars_1');}catch(e){window.open('https://t.me/qanexus_bot?start=buy_stars_1');}" style="width:100%;padding:12px;background:linear-gradient(135deg,#667eea,#764ba2);color:#fff;border:none;border-radius:10px;cursor:pointer;font-weight:700;font-size:14px;margin-top:10px;">
                                 💰 Купить за 10 ⭐
                             </button>
                         </div>
@@ -2481,7 +2481,7 @@
                                 </div>
                                 <div style="font-size:24px;">💎</div>
                             </div>
-                            <button onclick="const tg=window.Telegram?.WebApp;if(tg)tg.openTelegramLink('https://t.me/qanexus_bot?start=buy_stars_2');else window.location.href='https://t.me/qanexus_bot?start=buy_stars_2';" style="width:100%;padding:12px;background:linear-gradient(135deg,#667eea,#764ba2);color:#fff;border:none;border-radius:10px;cursor:pointer;font-weight:700;font-size:14px;margin-top:10px;">
+                            <button onclick="try{tg.openLink('https://t.me/qanexus_bot?start=buy_stars_2');}catch(e){window.open('https://t.me/qanexus_bot?start=buy_stars_2');}" style="width:100%;padding:12px;background:linear-gradient(135deg,#667eea,#764ba2);color:#fff;border:none;border-radius:10px;cursor:pointer;font-weight:700;font-size:14px;margin-top:10px;">
                                 💰 Купить за 40 ⭐
                             </button>
                         </div>
