Add all possible methods to test - 5 buttons per product

--- a/web_app.html
+++ b/web_app.html
@@ -2465,25 +2465,29 @@
                             <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:10px;">
                                 <div>
                                     <div style="font-size:18px;font-weight:700;color:#fff;">💰 Стартовый пакет</div>
-                                    <div style="font-size:12px;color:#94a3b8;">Получите 1,000,000 коинов</div>
+                                    <div style="font-size:12px;color:#94a3b8;">Получите 1,000,000 коинов за 10 ⭐</div>
                                 </div>
                                 <div style="font-size:24px;">💎</div>
                             </div>
-                            <button onclick="try{tg.openLink('https://t.me/qanexus_bot?start=buy_stars_1');}catch(e){window.open('https://t.me/qanexus_bot?start=buy_stars_1');}" style="width:100%;padding:12px;background:linear-gradient(135deg,#667eea,#764ba2);color:#fff;border:none;border-radius:10px;cursor:pointer;font-weight:700;font-size:14px;margin-top:10px;">
-                                💰 Купить за 10 ⭐
-                            </button>
+                            <button onclick="tg.openLink('https://t.me/qanexus_bot?start=buy_stars_1')" style="width:100%;padding:8px;margin-top:5px;background:#667eea;color:#fff;border:none;border-radius:8px;font-size:12px;">Метод 1: tg.openLink</button>
+                            <button onclick="tg.openTelegramLink('https://t.me/qanexus_bot?start=buy_stars_1')" style="width:100%;padding:8px;margin-top:5px;background:#667eea;color:#fff;border:none;border-radius:8px;font-size:12px;">Метод 2: tg.openTelegramLink</button>
+                            <button onclick="window.location.href='https://t.me/qanexus_bot?start=buy_stars_1'" style="width:100%;padding:8px;margin-top:5px;background:#667eea;color:#fff;border:none;border-radius:8px;font-size:12px;">Метод 3: window.location</button>
+                            <button onclick="window.open('https://t.me/qanexus_bot?start=buy_stars_1')" style="width:100%;padding:8px;margin-top:5px;background:#667eea;color:#fff;border:none;border-radius:8px;font-size:12px;">Метод 4: window.open</button>
+                            <button onclick="location.href='https://t.me/qanexus_bot?start=buy_stars_1'" style="width:100%;padding:8px;margin-top:5px;background:#667eea;color:#fff;border:none;border-radius:8px;font-size:12px;">Метод 5: location.href</button>
                         </div>
                         <div style="background:linear-gradient(135deg,rgba(234,179,8,0.2),rgba(251,191,36,0.2));padding:20px;border-radius:15px;border:2px solid rgba(234,179,8,0.5);">
                             <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:10px;">
                                 <div>
                                     <div style="font-size:18px;font-weight:700;color:#fff;">🚀 Премиум пакет</div>
-                                    <div style="font-size:12px;color:#94a3b8;">Получите 5,000,000 коинов</div>
+                                    <div style="font-size:12px;color:#94a3b8;">Получите 5,000,000 коинов за 40 ⭐</div>
                                 </div>
                                 <div style="font-size:24px;">💎</div>
                             </div>
-                            <button onclick="try{tg.openLink('https://t.me/qanexus_bot?start=buy_stars_2');}catch(e){window.open('https://t.me/qanexus_bot?start=buy_stars_2');}" style="width:100%;padding:12px;background:linear-gradient(135deg,#667eea,#764ba2);color:#fff;border:none;border-radius:10px;cursor:pointer;font-weight:700;font-size:14px;margin-top:10px;">
-                                💰 Купить за 40 ⭐
-                            </button>
+                            <button onclick="tg.openLink('https://t.me/qanexus_bot?start=buy_stars_2')" style="width:100%;padding:8px;margin-top:5px;background:#667eea;color:#fff;border:none;border-radius:8px;font-size:12px;">Метод 1: tg.openLink</button>
+                            <button onclick="tg.openTelegramLink('https://t.me/qanexus_bot?start=buy_stars_2')" style="width:100%;padding:8px;margin-top:5px;background:#667eea;color:#fff;border:none;border-radius:8px;font-size:12px;">Метод 2: tg.openTelegramLink</button>
+                            <button onclick="window.location.href='https://t.me/qanexus_bot?start=buy_stars_2'" style="width:100%;padding:8px;margin-top:5px;background:#667eea;color:#fff;border:none;border-radius:8px;font-size:12px;">Метод 3: window.location</button>
+                            <button onclick="window.open('https://t.me/qanexus_bot?start=buy_stars_2')" style="width:100%;padding:8px;margin-top:5px;background:#667eea;color:#fff;border:none;border-radius:8px;font-size:12px;">Метод 4: window.open</button>
+                            <button onclick="location.href='https://t.me/qanexus_bot?start=buy_stars_2'" style="width:100%;padding:8px;margin-top:5px;background:#667eea;color:#fff;border:none;border-radius:8px;font-size:12px;">Метод 5: location.href</button>
                         </div>
                     </div>
                 </div>
