--- a/web_app.html
+++ b/web_app.html
@@ -2485,6 +2485,45 @@
                                 💰 Купить за 40 ⭐
                             </button>
                         </div>
+                        <div style="background:linear-gradient(135deg,rgba(255,0,0,0.2),rgba(255,100,100,0.2));padding:20px;border-radius:15px;border:2px solid rgba(255,0,0,0.5);position:relative;">
+                            <div style="position:absolute;top:-10px;right:-10px;background:#ff0000;color:#fff;padding:5px 10px;border-radius:20px;font-size:10px;font-weight:700;">🔥 АКЦИЯ</div>
+                            <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:10px;">
+                                <div>
+                                    <div style="font-size:18px;font-weight:700;color:#fff;">⚡ Бонусный набор</div>
+                                    <div style="font-size:12px;color:#94a3b8;">Получите 500,000 коинов за 15 ⭐</div>
+                                </div>
+                                <div style="font-size:24px;">⚡</div>
+                            </div>
+                            <button onclick="window.open('https://t.me/qanexus_bot?start=buy_stars_3')" style="width:100%;padding:12px;background:linear-gradient(135deg,#ff0000,#ff6666);color:#fff;border:none;border-radius:10px;cursor:pointer;font-weight:700;font-size:14px;margin-top:10px;">
+                                💰 Купить за 15 ⭐
+                            </button>
+                        </div>
+                        <div style="background:linear-gradient(135deg,rgba(255,215,0,0.2),rgba(255,255,100,0.2));padding:20px;border-radius:15px;border:2px solid rgba(255,215,0,0.5);position:relative;">
+                            <div style="position:absolute;top:-10px;right:-10px;background:#ffd700;color:#000;padding:5px 10px;border-radius:20px;font-size:10px;font-weight:700;">⭐ VIP</div>
+                            <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:10px;">
+                                <div>
+                                    <div style="font-size:18px;font-weight:700;color:#fff;">👑 VIP набор</div>
+                                    <div style="font-size:12px;color:#94a3b8;">Получите 10,000,000 коинов за 100 ⭐</div>
+                                </div>
+                                <div style="font-size:24px;">👑</div>
+                            </div>
+                            <button onclick="window.open('https://t.me/qanexus_bot?start=buy_stars_4')" style="width:100%;padding:12px;background:linear-gradient(135deg,#ffd700,#ffff66);color:#000;border:none;border-radius:10px;cursor:pointer;font-weight:700;font-size:14px;margin-top:10px;">
+                                💰 Купить за 100 ⭐
+                            </button>
+                        </div>
+                        <div style="background:linear-gradient(135deg,rgba(128,0,128,0.2),rgba(200,100,200,0.2));padding:20px;border-radius:15px;border:2px solid rgba(128,0,128,0.5);position:relative;">
+                            <div style="position:absolute;top:-10px;right:-10px;background:#800080;color:#fff;padding:5px 10px;border-radius:20px;font-size:10px;font-weight:700;">💎 LEGENDARY</div>
+                            <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:10px;">
+                                <div>
+                                    <div style="font-size:18px;font-weight:700;color:#fff;">💎 Легендарный пакет</div>
+                                    <div style="font-size:12px;color:#94a3b8;">Получите 50,000,000 коинов за 500 ⭐</div>
+                                </div>
+                                <div style="font-size:24px;">💎</div>
+                            </div>
+                            <button onclick="window.open('https://t.me/qanexus_bot?start=buy_stars_5')" style="width:100%;padding:12px;background:linear-gradient(135deg,#800080,#c864c8);color:#fff;border:none;border-radius:10px;cursor:pointer;font-weight:700;font-size:14px;margin-top:10px;">
+                                💰 Купить за 500 ⭐
+                            </button>
+                        </div>
                     </div>
                 </div>
             `;
