Update version to v3.0 in web_app.html

--- a/web_app.html
+++ b/web_app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Quantum Nexus v2.0 -->
+<!-- Quantum Nexus v3.0 - Shop Update 60 products -->
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
