Force update v4.0 with instructions

--- a/web_app.html
+++ b/web_app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Quantum Nexus v3.0 - Shop Update 60 products -->
+<!-- Quantum Nexus v4.0 - Updated Shop with 60 Products - ИНСТРУКЦИЯ: Выполните git pull и systemctl restart на сервере -->
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
