--- a/web_app.html
+++ b/web_app.html
@@ -2510,15 +2510,16 @@
                             <button onclick="window.open('https://t.me/qanexus_bot?start=buy_stars_1')" style="width:100%;padding:9px;background:linear-gradient(135deg,#667eea,#764ba2);color:#fff;border:none;border-radius:8px;cursor:pointer;font-weight:700;font-size:12px;">💰 50 ⭐</button>
                         </div>
                         
-                        <div data-category="starter" style="background:rgba(102,126,234,0.25);padding:10px;border-radius:10px;border:1px solid rgba(102,126,234,0.5);">
-                            <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:6px;">
-                                <div>
-                                    <div style="font-size:13px;font-weight:700;color:#fff;">✨ Базовый</div>
-                                    <div style="font-size:9px;color:#94a3b8;">500K</div>
+                        <div data-category="starter" style="background:rgba(102,126,234,0.25);padding:12px;border-radius:10px;border:1px solid rgba(102,126,234,0.5);">
+                            <div style="display:flex;align-items:center;gap:10px;margin-bottom:8px;">
+                                <div style="font-size:32px;">✨</div>
+                                <div style="flex:1;">
+                                    <div style="font-size:15px;font-weight:700;color:#fff;">✨ Базовый старт</div>
+                                    <div style="font-size:11px;color:#94a3b8;margin-top:4px;">Получите 500,000 коинов для быстрого роста</div>
+                                    <div style="font-size:10px;color:#667eea;margin-top:4px;">✅ Быстрый старт</div>
                                 </div>
-                                <div style="font-size:18px;">💎</div>
                             </div>
-                            <button onclick="window.open('https://t.me/qanexus_bot?start=buy_stars_2')" style="width:100%;padding:8px;background:linear-gradient(135deg,#667eea,#764ba2);color:#fff;border:none;border-radius:8px;cursor:pointer;font-weight:700;font-size:11px;">💰 120 ⭐</button>
+                            <button onclick="window.open('https://t.me/qanexus_bot?start=buy_stars_2')" style="width:100%;padding:9px;background:linear-gradient(135deg,#667eea,#764ba2);color:#fff;border:none;border-radius:8px;cursor:pointer;font-weight:700;font-size:12px;">💰 120 ⭐</button>
                         </div>
                         
                         <div data-category="starter" style="background:rgba(102,126,234,0.25);padding:10px;border-radius:10px;border:1px solid rgba(102,126,234,0.5);">
