--- a/web_app.html
+++ b/web_app.html
@@ -2479,6 +2479,7 @@
                 tg.HapticFeedback.impactOccurred('light');
             } catch(err) {}
             
+            // Debug: Create simple modal
             const modal = document.createElement('div');
             modal.className = 'modal active';
             modal.id = 'buyCurrencyModal';
