Fix top leaders data, remove dark bg, lower z-index

--- a/web_app.html
+++ b/web_app.html
@@ -235,7 +235,7 @@
             font-size: 24px;
             border: 3px solid rgba(255, 255, 255, 0.4);
             cursor: pointer;
-            z-index: 10000;
+            z-index: 10;
             box-shadow: 0 0 20px rgba(167, 139, 250, 0.6), 0 4px 15px rgba(167, 139, 250, 0.5);
             transition: all 0.3s ease;
             overflow: hidden;
@@ -272,7 +272,7 @@
             font-size: 24px;
             border: 3px solid rgba(255, 255, 255, 0.3);
             cursor: pointer;
-            z-index: 10000;
+            z-index: 10;
             box-shadow: 0 4px 15px rgba(102, 126, 234, 0.5);
             transition: all 0.3s ease;
         }
@@ -1745,7 +1745,7 @@
                                     <div style="font-size:10px;color:#94a3b8;margin-bottom:3px;">💎 QuanHash</div>
                                     <div style="font-size:14px;font-weight:800;color:#10b981;">${quanhash}</div>
                                 </div>
-                                <div style="background:rgba(0,0,0,0.3);padding:8px;border-radius:8px;">
+                                <div style="padding:8px;border-radius:8px;">
                                     <div style="font-size:10px;color:#94a3b8;margin-bottom:3px;">📈 Пассивный доход</div>
                                     <div style="font-size:14px;font-weight:800;color:#f093fb;">+${passiveIncome}/час</div>
                                 </div>
