--- a/web_app.html
+++ b/web_app.html
@@ -1713,8 +1713,10 @@
                     const sortedUsers = topUsers.slice(0, 100);
                     
                     let topHTML = sortedUsers.map((u, idx) => {
-                        const medal = idx === 0 ? '🥇' : idx === 1 ? '🥈' : idx === 2 ? '🥉' : '';
-                        const rankColor = idx === 0 ? '#ffd700' : idx === 1 ? '#c0c0c0' : idx === 2 ? '#cd7f32' : (idx < 10 ? '#667eea' : '#94a3b8');
+                        // Fix: idx starts from 0, so rank display is idx+1
+                        const displayRank = idx + 1;
+                        const medal = displayRank === 1 ? '🥇' : displayRank === 2 ? '🥈' : displayRank === 3 ? '🥉' : '';
+                        const rankColor = displayRank === 1 ? '#ffd700' : displayRank === 2 ? '#c0c0c0' : displayRank === 3 ? '#cd7f32' : (displayRank <= 10 ? '#667eea' : '#94a3b8');
                         const isVIP = u.vip_level && u.vip_level > 0;
                         
                         // Beautiful VIP badges with gradient colors
@@ -1741,8 +1743,8 @@
                         return `<div style="padding:16px;background:${isVIP ? 'linear-gradient(135deg,rgba(255,215,0,0.2),rgba(255,255,255,0.05))' : 'rgba(0,0,0,0.25)'};border-radius:16px;margin-bottom:14px;border:2px solid ${isVIP ? 'rgba(255,215,0,0.5)' : 'rgba(255,255,255,0.1)'};transition:all 0.3s;position:relative;overflow:hidden;">
                             ${isVIP ? `<div style="position:absolute;top:0;left:0;right:0;height:3px;background:${vipStyle.gradient};"></div>` : ''}
                             <div style="display:flex;align-items:center;gap:16px;margin-bottom:12px;">
-                                <div style="width:56px;height:56px;background:${isVIP ? vipStyle.gradient : 'linear-gradient(135deg,#667eea,#764ba2)'};border-radius:50%;display:flex;align-items:center;justify-content:center;font-size:26px;font-weight:900;color:#fff;${idx < 3 ? 'box-shadow:0 0 20px rgba(255,215,0,0.6);' : 'box-shadow:0 4px 12px rgba(0,0,0,0.3);'}">
-                                    ${medal || (idx + 1)}
+                                <div style="width:56px;height:56px;background:${isVIP ? vipStyle.gradient : 'linear-gradient(135deg,#667eea,#764ba2)'};border-radius:50%;display:flex;align-items:center;justify-content:center;font-size:26px;font-weight:900;color:#fff;${displayRank <= 3 ? 'box-shadow:0 0 20px rgba(255,215,0,0.6);' : 'box-shadow:0 4px 12px rgba(0,0,0,0.3);'}">
+                                    ${medal || displayRank}
                                 </div>
                                 <div style="flex:1;">
                                     <div style="display:flex;align-items:center;gap:8px;margin-bottom:6px;">
