--- a/web_app.html
+++ b/web_app.html
@@ -1743,8 +1743,8 @@
                         return `<div style="padding:16px;background:${isVIP ? 'linear-gradient(135deg,rgba(255,215,0,0.2),rgba(255,255,255,0.05))' : 'rgba(0,0,0,0.25)'};border-radius:16px;margin-bottom:14px;border:2px solid ${isVIP ? 'rgba(255,215,0,0.5)' : 'rgba(255,255,255,0.1)'};transition:all 0.3s;position:relative;overflow:hidden;">
                             ${isVIP ? `<div style="position:absolute;top:0;left:0;right:0;height:3px;background:${vipStyle.gradient};"></div>` : ''}
                             <div style="display:flex;align-items:center;gap:16px;margin-bottom:12px;">
-                                <div style="width:56px;height:56px;background:${isVIP ? vipStyle.gradient : 'linear-gradient(135deg,#667eea,#764ba2)'};border-radius:${displayRank === 5 ? '12px' : '50%'};display:flex;align-items:center;justify-content:center;font-size:26px;font-weight:900;color:#fff;${displayRank <= 3 ? 'box-shadow:0 0 20px rgba(255,215,0,0.6);' : 'box-shadow:0 4px 12px rgba(0,0,0,0.3);'}">
-                                    ${medal || displayRank}
+                                <div style="width:56px;height:56px;background:${isVIP ? vipStyle.gradient : 'linear-gradient(135deg,#667eea,#764ba2)'};border-radius:50%;display:flex;align-items:center;justify-content:center;font-size:26px;font-weight:900;color:#fff;${displayRank <= 3 ? 'box-shadow:0 0 20px rgba(255,215,0,0.6);' : 'box-shadow:0 4px 12px rgba(0,0,0,0.3);'}">
+                                    ${displayRank === 5 ? '👤' : (medal || displayRank)}
                                 </div>
                                 <div style="flex:1;">
                                     <div style="display:flex;align-items:center;gap:8px;margin-bottom:6px;">
@@ -1774,7 +1774,10 @@
                             <div style="background:linear-gradient(135deg,rgba(255,215,0,0.15),rgba(255,255,255,0.05));padding:12px;border-radius:12px;margin-top:12px;border:2px solid ${isVIP ? 'rgba(255,215,0,0.4)' : 'rgba(255,255,255,0.2)'};">
                                 <div style="display:flex;align-items:center;justify-content:space-between;">
                                     <div style="font-size:12px;color:#94a3b8;font-weight:700;">💵 ВСЕГО ЗАРАБОТАНО КОИНОВ</div>
-                                    <div style="font-size:20px;font-weight:900;color:#ffd700;text-shadow:0 0 10px rgba(255,215,0,0.5);">${totalEarned}</div>
+                                    <div style="display:flex;align-items:center;gap:6px;">
+                                        <div style="font-size:20px;font-weight:900;color:#ffd700;text-shadow:0 0 10px rgba(255,215,0,0.5);">${totalEarned}</div>
+                                        <div style="font-size:24px;">💰</div>
+                                    </div>
                                 </div>
                             </div>
                         </div>`;
@@ -1805,7 +1808,7 @@
                             <h2 style="font-size: 20px; color: #fff; margin: 0; font-weight: 900;">🏆 ТОП 100 ЗА 24 ЧАСА</h2>
                             <button onclick="this.closest('.modal').remove(); if(window.topLeadersInterval) clearInterval(window.topLeadersInterval);" style="background:rgba(255,255,255,0.2);border:2px solid rgba(255,255,255,0.3);border-radius:50%;width:36px;height:36px;color:#fff;cursor:pointer;font-size:20px;font-weight:800;">✕</button>
                         </div>
-                        <div style="font-size:12px;color:rgba(255,255,255,0.9);font-weight:600;">⏱️ Обновляется каждые 2.5 сек • 🎯 Рейтинг по заработанным коинам</div>
+                        <div style="font-size:12px;color:rgba(255,255,255,0.9);font-weight:600;">🎯 Рейтинг по заработанным коинам</div>
                     </div>
                     
                     <div style="padding:20px;">
