--- a/web_app.html
+++ b/web_app.html
@@ -2297,7 +2297,7 @@
                     fetch('/api/update_energy', {
                         method: 'POST',
                         headers: {'Content-Type': 'application/json'},
-                        body: JSON.stringify({user_id: user?.id, energy: newEnergy})
+                        body: JSON.stringify({user_id: window.user?.id, energy: newEnergy})
                     });
                 }
             }, 1000);
@@ -2426,7 +2426,7 @@
                 method: 'POST',
                 headers: {'Content-Type': 'application/json'},
                 body: JSON.stringify({
-                    user_id: user?.id,
+                    user_id: window.user?.id,
                     boost_type: boostType,
                     price: price
                 })
@@ -2458,7 +2458,7 @@
             fetch('/api/shop', {
                 method: 'POST',
                 headers: {'Content-Type': 'application/json'},
-                body: JSON.stringify({user_id: user?.id, category: category})
+                body: JSON.stringify({user_id: window.user?.id, category: category})
             })
             .then(res => res.json())
             .then(data => {
@@ -2481,7 +2481,7 @@
             fetch('/api/buy', {
                 method: 'POST',
                 headers: {'Content-Type': 'application/json'},
-                body: JSON.stringify({user_id: user?.id, item_type: item_type, price: price})
+                body: JSON.stringify({user_id: window.user?.id, item_type: item_type, price: price})
             })
             .then(res => res.json())
             .then(data => {
@@ -2503,7 +2503,7 @@
                         fetch('/api/shop', {
                             method: 'POST',
                             headers: {'Content-Type': 'application/json'},
-                            body: JSON.stringify({user_id: user?.id, category: 'cards'})
+                            body: JSON.stringify({user_id: window.user?.id, category: 'cards'})
                         })
                         .then(res => res.json())
                         .then(shopData => {
@@ -2627,7 +2627,7 @@
             fetch('/api/buy', {
                 method: 'POST',
                 headers: {'Content-Type': 'application/json'},
-                body: JSON.stringify({user_id: user?.id, item_type: id, price: price})
+                body: JSON.stringify({user_id: window.user?.id, item_type: id, price: price})
             })
             .then(res => res.json())
             .then(data => {
@@ -2649,7 +2649,7 @@
             fetch('/api/buy_energy', {
                 method: 'POST',
                 headers: {'Content-Type': 'application/json'},
-                body: JSON.stringify({user_id: user?.id, amount: amount, price: price})
+                body: JSON.stringify({user_id: window.user?.id, amount: amount, price: price})
             })
             .then(res => res.json())
             .then(data => {
@@ -2745,7 +2745,7 @@
                 method: 'POST',
                 headers: {'Content-Type': 'application/json'},
                 body: JSON.stringify({
-                    user_id: user?.id,
+                    user_id: window.user?.id,
                     machine_type: machineType,
                     price: price
                 })
@@ -2779,7 +2779,7 @@
             fetch('/api/mining', {
                 method: 'POST',
                 headers: {'Content-Type': 'application/json'},
-                body: JSON.stringify({user_id: user?.id, category: category})
+                body: JSON.stringify({user_id: window.user?.id, category: category})
             })
             .then(res => res.json())
             .then(data => {
@@ -2834,7 +2834,7 @@
                 method: 'POST',
                 headers: {'Content-Type': 'application/json'},
                 body: JSON.stringify({
-                    user_id: user?.id,
+                    user_id: window.user?.id,
                     machine_id: id,
                     price: price,
                     currency: currency
@@ -2948,7 +2948,7 @@
                     method: 'POST',
                     headers: {'Content-Type': 'application/json'},
                     body: JSON.stringify({
-                        user_id: user?.id,
+                        user_id: window.user?.id,
                         card_type: cardType
                     })
                 })
@@ -2969,7 +2969,7 @@
                 fetch('/api/shop', {
                     method: 'POST',
                     headers: {'Content-Type': 'application/json'},
-                    body: JSON.stringify({user_id: user?.id, category: 'cards'})
+                    body: JSON.stringify({user_id: window.user?.id, category: 'cards'})
                 })
                 .then(res => res.json())
                 .then(shopData => {
@@ -3255,7 +3255,7 @@
                 method: 'POST',
                 headers: {'Content-Type': 'application/json'},
                 body: JSON.stringify({
-                    user_id: user?.id, 
+                    user_id: window.user?.id, 
                     address: address,
                     amount: amount
                 })
@@ -3341,7 +3341,7 @@
                                     fetch('/api/tap', {
                                         method: 'POST',
                                         headers: {'Content-Type': 'application/json'},
-                                        body: JSON.stringify({user_id: user?.id, is_auto: true})
+                                        body: JSON.stringify({user_id: window.user?.id, is_auto: true})
                                     })
                                     .then(res => res.json())
                                     .then(data => {
@@ -3487,7 +3487,7 @@
                 method: 'POST',
                 headers: {'Content-Type': 'application/json'},
                 body: JSON.stringify({
-                    user_id: user?.id,
+                    user_id: window.user?.id,
                     topic: topic,
                     message: message
                 })
@@ -3667,7 +3667,7 @@
             fetch('/api/claim_task', {
                 method: 'POST',
                 headers: {'Content-Type': 'application/json'},
-                body: JSON.stringify({user_id: user?.id, task_id: taskId})
+                body: JSON.stringify({user_id: window.user?.id, task_id: taskId})
             })
             .then(res => res.json())
             .then(data => {
