--- a/web_app.html
+++ b/web_app.html
@@ -1407,9 +1407,13 @@
         tg.ready();
         tg.expand();
 
-        const user = tg.initDataUnsafe?.user;
-        if (user) {
-            document.getElementById('username').textContent = user.first_name || 'Майнер';
+        // Make user globally available
+        window.user = tg.initDataUnsafe?.user;
+        if (window.user) {
+            const usernameEl = document.getElementById('username');
+            if (usernameEl) {
+                usernameEl.textContent = window.user.first_name || 'Майнер';
+            }
         }
 
         let energyRegenInterval;
@@ -1567,7 +1571,7 @@
             fetch('/api/user_data', {
                 method: 'POST',
                 headers: {'Content-Type': 'application/json'},
-                body: JSON.stringify({user_id: user?.id})
+                body: JSON.stringify({user_id: window.user?.id})
             })
             .then(res => res.json())
             .then(userData => {
@@ -1946,7 +1950,7 @@
             fetch('/api/user_data', {
                 method: 'POST',
                 headers: {'Content-Type': 'application/json'},
-                body: JSON.stringify({user_id: user?.id})
+                body: JSON.stringify({user_id: window.user?.id})
             })
             .then(res => res.json())
             .then(data => {
@@ -1978,7 +1982,7 @@
             fetch('/api/offline_income', {
                 method: 'POST',
                 headers: {'Content-Type': 'application/json'},
-                body: JSON.stringify({user_id: user?.id})
+                body: JSON.stringify({user_id: window.user?.id})
             })
             .then(res => res.json())
             .then(data => {
@@ -2027,7 +2031,7 @@
                     fetch('/api/user_data', {
                         method: 'POST',
                         headers: {'Content-Type': 'application/json'},
-                        body: JSON.stringify({user_id: user?.id})
+                        body: JSON.stringify({user_id: window.user?.id})
                     })
                     .then(res => res.json())
                     .then(data => {
@@ -2078,7 +2082,7 @@
             fetch('/api/tap', {
                 method: 'POST',
                 headers: {'Content-Type': 'application/json'},
-                body: JSON.stringify({user_id: user?.id})
+                body: JSON.stringify({user_id: window.user?.id})
             })
             .then(res => res.json())
             .then(data => {
@@ -2141,7 +2145,7 @@
             fetch('/api/user_data', {
                 method: 'POST',
                 headers: {'Content-Type': 'application/json'},
-                body: JSON.stringify({user_id: user?.id})
+                body: JSON.stringify({user_id: window.user?.id})
             })
             .then(res => res.json())
             .then(data => {
@@ -2460,7 +2464,7 @@
             fetch('/api/user_data', {
                 method: 'POST',
                 headers: {'Content-Type': 'application/json'},
-                body: JSON.stringify({user_id: user?.id})
+                body: JSON.stringify({user_id: window.user?.id})
             })
             .then(res => res.json())
             .then(data => {
@@ -2676,7 +2680,7 @@
                 fetch('/api/user_data', {
                     method: 'POST',
                     headers: {'Content-Type': 'application/json'},
-                    body: JSON.stringify({user_id: user?.id})
+                    body: JSON.stringify({user_id: window.user?.id})
                 })
                 .then(res => res.json())
                 .then(data => {
@@ -2790,7 +2794,7 @@
             fetch('/api/cards', {
                 method: 'POST',
                 headers: {'Content-Type': 'application/json'},
-                body: JSON.stringify({user_id: user?.id})
+                body: JSON.stringify({user_id: window.user?.id})
             })
             .then(res => res.json())
             .then(data => {
@@ -2821,7 +2825,7 @@
             fetch('/api/stats', {
                 method: 'POST',
                 headers: {'Content-Type': 'application/json'},
-                body: JSON.stringify({user_id: user?.id})
+                body: JSON.stringify({user_id: window.user?.id})
             })
             .then(res => res.json())
             .then(data => {
@@ -2857,7 +2861,7 @@
             fetch('/api/referrals', {
                 method: 'POST',
                 headers: {'Content-Type': 'application/json'},
-                body: JSON.stringify({user_id: user?.id})
+                body: JSON.stringify({user_id: window.user?.id})
             })
             .then(res => res.json())
             .then(data => {
@@ -2885,7 +2889,7 @@
             fetch('/api/user_data', {
                 method: 'POST',
                 headers: {'Content-Type': 'application/json'},
-                body: JSON.stringify({user_id: user?.id})
+                body: JSON.stringify({user_id: window.user?.id})
             })
             .then(res => res.json())
             .then(data => {
@@ -2945,7 +2949,7 @@
             fetch('/api/history', {
                 method: 'POST',
                 headers: {'Content-Type': 'application/json'},
-                body: JSON.stringify({user_id: user?.id})
+                body: JSON.stringify({user_id: window.user?.id})
             })
             .then(res => res.json())
             .then(data => {
@@ -3056,7 +3060,7 @@
             fetch('/api/user_support', {
                 method: 'POST',
                 headers: {'Content-Type': 'application/json'},
-                body: JSON.stringify({user_id: user?.id})
+                body: JSON.stringify({user_id: window.user?.id})
             })
             .then(res => res.json())
             .then(data => {
@@ -3077,7 +3081,7 @@
             fetch('/api/user_data', {
                 method: 'POST',
                 headers: {'Content-Type': 'application/json'},
-                body: JSON.stringify({user_id: user?.id})
+                body: JSON.stringify({user_id: window.user?.id})
             })
             .then(res => res.json())
             .then(data => {
@@ -3278,13 +3282,13 @@
             fetch('/api/mark_tickets_read', {
                 method: 'POST',
                 headers: {'Content-Type': 'application/json'},
-                body: JSON.stringify({user_id: user?.id})
+                body: JSON.stringify({user_id: window.user?.id})
             });
             
             fetch('/api/user_support', {
                 method: 'POST',
                 headers: {'Content-Type': 'application/json'},
-                body: JSON.stringify({user_id: user?.id})
+                body: JSON.stringify({user_id: window.user?.id})
             })
             .then(res => res.json())
             .then(data => {
@@ -3346,7 +3350,7 @@
             fetch('/api/daily_tasks', {
                 method: 'POST',
                 headers: {'Content-Type': 'application/json'},
-                body: JSON.stringify({user_id: user?.id})
+                body: JSON.stringify({user_id: window.user?.id})
             })
             .then(res => res.json())
             .then(data => {
@@ -3359,7 +3363,7 @@
                         fetch('/api/user_data', {
                             method: 'POST',
                             headers: {'Content-Type': 'application/json'},
-                            body: JSON.stringify({user_id: user?.id})
+                            body: JSON.stringify({user_id: window.user?.id})
                         })
                         .then(res => res.json())
                         .then(userData => {
