Fix: Remove absolute positioning from vip buttons CSS classes

--- a/web_app.html
+++ b/web_app.html
@@ -222,11 +222,9 @@
         }
         
         .vip-profile-icon {
-            position: absolute;
-            top: 60px;
-            right: 20px;
-            width: 48px;
-            height: 48px;
+            position: relative;
+            width: 45px;
+            height: 45px;
             background: linear-gradient(135deg, #a78bfa, #c084fc, #d946ef);
             border-radius: 50%;
             display: flex;
@@ -259,11 +257,9 @@
         }
         
         .vip-top-button {
-            position: absolute;
-            top: 60px;
-            left: 20px;
-            width: 48px;
-            height: 48px;
+            position: relative;
+            width: 45px;
+            height: 45px;
             background: linear-gradient(135deg, #667eea, #764ba2);
             border-radius: 50%;
             display: flex;
