--- a/web_app.html
+++ b/web_app.html
@@ -1647,7 +1647,7 @@
                                         <span style="color:#94a3b8;">👆 Всего тапов:</span>
                                         <span data-stat="total_taps" style="font-weight:700;color:#fff;">${Math.floor(userData.total_taps || 0)}</span>
                                     </div>
-                                    ${userData.active_multiplier > 10 ? `
+                                    ${userData.active_multiplier > 1 ? `
                                     <div style="display:flex;justify-content:space-between;padding:10px;border-bottom:1px solid rgba(255,255,255,0.1);">
                                         <span style="color:#94a3b8;">⚡ Усилитель тапа:</span>
                                         <span style="font-weight:700;color:#fbbf24;">+${userData.active_multiplier - 1} тапов</span>
@@ -3011,17 +3011,36 @@
             .then(data => {
                 const shop = document.getElementById('miningShop');
                 if(shop) {
-                    shop.innerHTML = data.shop_machines.map(m => `
-                        <div style="background:rgba(0,0,0,0.3);padding:15px;border-radius:12px;border:1px solid rgba(102,126,234,0.3);">
-                            <div style="font-weight:700;margin-bottom:8px;">${m.name}</div>
-                            <div style="font-size:12px;color:#94a3b8;margin-bottom:10px;">
-                                🪙 Hash: ${m.hash_rate}/s | 💰 Доход/ч: ${m.hash_per_hour}
-                            </div>
-                            <button onclick="buyMachine('${m.id}', ${m.price}, '${m.currency}')" style="width:100%;padding:8px;background:linear-gradient(135deg,#667eea,#764ba2);color:#fff;border:none;border-radius:8px;cursor:pointer;font-weight:600;">
-                                Купить за ${m.price} ${m.currency === 'coins' ? '🪙' : '💎'}
-                            </button>
-                        </div>
-                    `).join('');
+                    shop.innerHTML = data.shop_machines.map((m, index) => {
+                        // Lock machines - unlock every 5th machine
+                        const isLocked = index > 0 && (index + 1) % 5 !== 0;
+                        
+                        if (isLocked) {
+                            return `
+                                <div style="background:rgba(60,60,60,0.3);padding:15px;border-radius:12px;border:1px solid rgba(100,100,100,0.4);opacity:0.6;position:relative;">
+                                    <div style="position:absolute;top:5px;right:5px;background:rgba(239,68,68,0.8);color:#fff;padding:2px 8px;border-radius:10px;font-size:10px;font-weight:700;">🔒 Заблокировано</div>
+                                    <div style="font-size:24px;text-align:center;margin-bottom:6px;">🔒</div>
+                                    <div style="font-weight:700;margin-bottom:8px;color:#999;">${m.name}</div>
+                                    <div style="font-size:12px;color:#666;margin-bottom:10px;">
+                                        🪙 Hash: ${m.hash_rate}/s | 💰 Доход/ч: ${m.hash_per_hour}
+                                    </div>
+                                    <button disabled style="width:100%;padding:8px;background:rgba(100,100,100,0.5);color:#ccc;border:none;border-radius:8px;cursor:not-allowed;font-weight:600;">🔒 Доступно с ур.5 предыдущей</button>
+                                </div>
+                            `;
+                        } else {
+                            return `
+                                <div style="background:rgba(0,0,0,0.3);padding:15px;border-radius:12px;border:1px solid rgba(102,126,234,0.3);">
+                                    <div style="font-weight:700;margin-bottom:8px;">${m.name}</div>
+                                    <div style="font-size:12px;color:#94a3b8;margin-bottom:10px;">
+                                        🪙 Hash: ${m.hash_rate}/s | 💰 Доход/ч: ${m.hash_per_hour}
+                                    </div>
+                                    <button onclick="buyMachine('${m.id}', ${m.price}, '${m.currency}')" style="width:100%;padding:8px;background:linear-gradient(135deg,#667eea,#764ba2);color:#fff;border:none;border-radius:8px;cursor:pointer;font-weight:600;">
+                                        Купить за ${m.price} ${m.currency === 'coins' ? '🪙' : '💎'}
+                                    </button>
+                                </div>
+                            `;
+                        }
+                    }).join('');
                     
                     // Show user machines
                     const machinesList = document.getElementById('machinesList');
